# paper-processing-pipeline

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PLANS.md  README.es.md  README.md  RUN_REPORT.md  config.yaml  config_loader.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
data/metadata/: W1978290051__doi-10.1056-nejm199704173361601.metadata.json
data/registry/: documents.jsonl
docs/: README.es.md  architecture.md  contracts.md  operations.md  roadmap.md  security.md  setup.md  tests.md
docs/runbooks/: runpod-plan.md
ops/: __init__.py
ops/scripts/: __init__.py  audit_gap_rag_discarded_today.py  backfill_docling_titles_and_export_stats.py  cli.py  consolidate_raw_pdf_batches.py  create_data_layout.py  create_metadata_from_doi.py  draft_topics_from_metadata_citations.py  enrich_dirty_metadata_from_titles.py  export_metadata_citations_csv.py  export_pipeline_conversion_rates.py  generate_metadata_gap_seed_dois.py  (+6 more)
ops/scripts/bridge/: .gitignore  README.md  __init__.py  pyproject.toml
ops/scripts/bridge/victus_ingest_bridge/: __init__.py  bridge.py  cli.py  config.py  events.py  hashing.py  registry.py  schemas.py  storage.py
paper_pipeline/: artifacts.py  cli.py
scripts/: docling_ingest_pdf.py  explore_citations_semantic.py  json_to_bib.py  llm_to_claim.py
scripts/heuristics_model/: README.md  pyproject.toml
scripts/heuristics_model/input_markdown/: markdown_example.md
scripts/heuristics_model/src/heuristics_model/: __init__.py  chunking.py  classifier.py  cli.py  diagnostics.py  dictionaries.py  models.py  normalization.py  parser.py  pipeline.py  rendering.py
scripts/heuristics_model/tests/: conftest.py  test_classifier.py  test_diagnostics.py  test_integration_docling.py  test_normalization.py  test_pipeline.py  test_rendering.py
src/: artifacts.py  cli.py  config.py
tests/: conftest.py  test_analytics_cli_smoke.py  test_claims_csv_script.py  test_cli_smoke.py  test_config_loader.py  test_docling_title_backfill_stats_script.py  test_docling_v2_adapter.py  test_enrich_dirty_metadata_script.py  test_gap_discarded_audit_script.py  test_metadata_csv_script.py  test_metadata_from_doi_script.py  test_metadata_gap_seed_dois_script.py  test_metadata_seed_dois_script.py  test_metadata_selection.py  test_pipeline_conversion_rates_script.py  test_pipeline_parallel_flow.py  test_pre_ingestion_topics.py  test_refilter_metadata_script.py  test_run_parallel_docling.py  test_scripts_contracts.py  test_single_paper_testing_flow.py
(+52 files in other folders)
