[project]
name = "paper-processing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling==2.80.0",
    "torch",
    "openai==2.29.0",
    "requests==2.32.5",
    "PyYAML==6.0.3",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
