[project]
name = "paper-processing-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling==2.80.0",
    "torch",
    "openai==2.29.0",
    "psycopg[binary]>=3.2,<4",
    "requests==2.32.5",
    "PyYAML==6.0.3",
]

[project.scripts]
victus-processing = "ops.scripts.local.commands:main"
victus-bridge = "ops.scripts.bridge.victus_ingest_bridge.cli:main"

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "ops"]
